# ARC4NE

./: .env  README.md  TESTING_GUIDE.md  check-imports.sh  docker-compose.yml  dot-env-example  package.json
agent/: arc4ne_agent.py  config.py
app/: page.tsx
backend/: .dockerignore  Dockerfile  arc4ne.db  pyproject.toml  requirements.txt
backend/app/: db.py  health.py  main.py  models.py  security.py
backend/app/routers/: agent_api.py  auth_api.py  ui_api.py
docs/: 01-product-roadmap.md  02-service-architecture.md  03-security-model.md  04-agent-design.md  05-api-design.md  06-database-schema.md  07-ui-design.md  08-dev-strategy.md  HTTPS_SETUP.md  README.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/.next/: _events.json  app-build-manifest.json  trace
frontend/.next/cache/: config.json
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/app/: layout.tsx  page.tsx
frontend/app/agents/: agents-content.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/tasks/: page.tsx  tasks-content.tsx
frontend/components/: agent-config-modal.tsx  agent-details-modal.tsx  agent-registration-modal.tsx  agent-telemetry-dashboard.tsx  app-content.tsx  debug-info.tsx  protected-route.tsx  sidebar.tsx  task-assignment-modal.tsx  task-details-modal.tsx  telemetry-chart.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts  types.ts
nginx/: Dockerfile  entrypoint.sh  nginx.conf
scripts/: cert-info.sh  setup-https.sh
(+39 files in other folders)
